swim_common/src/form/tests/derive/form/unknown_container_attr.stderr
error: Unknown container attribute
  --> $DIR/unknown_container_attr.rs:19:12
   |
19 |     #[form(swim)]
   |            ^^^^
